# doc-extractor

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  determinism.yml  eval.yml
docs/: deferred-work.md  iam-policies.md  vendor-data-handling.md
scripts/: check_cost_ceiling.py  check_eval_thresholds.py  rebaseline_prompts.py  rebaseline_schemas.py  seed_golden_corpus.py  verify_canonical.py
src/doc_extractor/: __init__.py  cli.py  corrections.py  disagreement.py  exceptions.py  extract.py  markdown_io.py  s3_io.py  telemetry.py
tests/canonical/: test_determinism.py
tests/integration/: test_batch_concurrency.py  test_body_parse_path.py  test_cli_eval.py  test_cli_extract.py  test_corrections_overlay.py  test_disagreement_durability.py  test_disagreement_write.py  test_eval_harness.py  test_extract_head_skip.py  test_retry_escalation.py  test_verifier_disagreement.py  test_vision_path.py
tests/unit/: prompt_hashes.json  test_application_form_agent.py  test_bank_account_confirmation_agent.py  test_bank_statement_agent.py  test_body_parse_chinese.py  test_body_parse_nz.py  test_body_parse_purity.py  test_classifier.py  test_company_extract_agent.py  test_config_precedence.py  test_cost_ceiling_script.py  test_coverage_config.py  test_driver_licence_agent.py  test_entity_ownership_agent.py  test_eval_thresholds.py  test_factory.py  test_import_boundaries.py  test_invariant_battery_present.py  test_markdown_io_round_trip.py  test_matchers.py  test_national_id_agent.py  test_no_module_level_agent.py  test_other_agent.py  test_passport_agent.py  test_payment_receipt_agent.py  test_pdf_converter.py  test_pep_declaration_agent.py  test_prompt_loader.py  test_prompt_versioning.py  test_proof_of_address_agent.py  test_provenance_fields.py  test_provider_terms_documented.py  test_registry.py  test_s3_io_head_skip.py  test_scaffold.py  test_schema_byte_stability.py  (+10 more)
(+107 files in other folders)
