[project]
name = "doc-extractor"
version = "0.1.0"
description = "Vision-based document analyzer — multi-agent classifier + per-doc-type specialists, provider-agnostic via Agno, structured Pydantic output."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "suchfintech" }]

dependencies = [
    "agno>=1.0.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "boto3>=1.34.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "cel-python>=0.1.5",
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.11.0",
]

[project.scripts]
doc-extractor = "doc_extractor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_extractor"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# Story 8.6 — coverage gate (NFR20). The CI Pytest step adds
# `--cov --cov-fail-under=85` so a drop below 85% line coverage on
# `src/doc_extractor/` fails the build. `--cov` reads `source` from the
# section below; the omit list keeps prompt bodies and golden fixtures
# out of the denominator.
[tool.coverage.run]
source = ["src/doc_extractor"]
omit = [
    "src/doc_extractor/prompts/*.md",
    "tests/golden/**",
    "**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
